tests/paczka1/fuzzy1/94110236.err
Error in line 2: S884 S858 1,5
Error in line 8: urdMX91YD S858 41,6
Error in line 9: XAMXJEI S858 96,3
Error in line 14: FG6z2e7NkHQ AL48 3,9
Error in line 13: XAMXJEI S884 27,7
Error in line 31: S884 A148 41,9
